@@ -12,15 +12,14 @@
         <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <gwt.version>2.7.0</gwt.version>
-        <gwtquery.version>1.4.2</gwtquery.version>
+        <gwt.version>2.11.0</gwt.version>
 
         <junit.version>4.11</junit.version>
 
         <!-- plugin -->
         <surefire-plugin.version>2.17</surefire-plugin.version>
         <compiler-plugin.version>3.1</compiler-plugin.version>
-        <war-plugin.version>2.4</war-plugin.version>
+        <war-plugin.version>3.4.0</war-plugin.version>
     </properties>
 
     <dependencies>
@@ -34,19 +33,18 @@
 
         <!-- UI dependencies -->
         <dependency>
-            <groupId>com.google.gwt</groupId>
+            <groupId>org.gwtproject</groupId>
             <artifactId>gwt-user</artifactId>
             <version>${gwt.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.googlecode.gwtquery</groupId>
-            <artifactId>gwtquery</artifactId>
-            <version>${gwtquery.version}</version>
-            <scope>provided</scope>
+            <groupId>com.google.elemental2</groupId>
+            <artifactId>elemental2-dom</artifactId>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
-            <groupId>com.google.gwt</groupId>
+            <groupId>org.gwtproject</groupId>
             <artifactId>gwt-dev</artifactId>
             <version>${gwt.version}</version>
             <scope>provided</scope>
@@ -116,7 +114,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>${gwt.version}</version>
+                <version>2.10.0</version>
                 <executions>
                     <execution>
                         <configuration>
@@ -124,8 +122,9 @@
                             <includes>**/*GwtTest.java</includes>
                             <mode>htmlunit</mode>
                             <gen>gen</gen>
-                            <extraJvmArgs>-Xss1024k -Xmx512M -XX:MaxPermSize=512m</extraJvmArgs>
+                            <extraJvmArgs>-Xss1024k -Xmx512M</extraJvmArgs>
                             <saveSource>true</saveSource>
+                            <sourceLevel>8</sourceLevel>
                             <module>com.google.gwt.site.webapp.GWTProject</module>
                             <!--
                             Draft and pretty mode are turned on so that beginners can try out debugging
